--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -1,3 +1,118 @@
 // Place all the styles related to the Projects controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+//= require 'icheck/square/blue'
+//= require bootstrap/bootstrap
+
+@font-face {
+  font-family: 'ArialRegular';
+  src:url('ArialRegular.eot');
+  src:url('ArialRegular.eot?#iefix') format('embedded-opentype'),
+    url('ArialRegular.svg#icomoon') format('svg'),
+    url('ArialRegular.woff') format('woff'),
+    url('ArialRegular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+div.header{
+    font-family: 'ArialRegular';
+    height: 65px;
+    background-color:DeepSkyBlue;
+    h1{
+        margin:auto;
+        line-height:65px;
+        vertical-align:middle;
+        color:white;
+        text-align: right;
+        a{
+            vertical-align:middle;
+            color: white;
+            padding-left: 47%;
+            padding-right: 2%;
+            font-size: 200%;
+            font-weight: 100;
+            text-decoration: none;
+            text-align: right;
+        }
+    }
+}
+
+div.tab {
+    div.proj {
+        font-family: 'ArialRegular';
+        -webkit-box-shadow: 0px 3px 4px 0px rgba(0,0,0,0.5);
+        -moz-box-shadow: 0px 3px 4px 0px rgba(0,0,0,0.5);
+        box-shadow: 0px 3px 4px 0px rgba(0,0,0,0.5);
+        padding-bottom: 5px;
+        padding-right: 5px;
+        h3{
+            margin-left: 20px;
+            height: 45px;
+            line-height:63px;
+            vertical-align:middle;
+        }
+        li{
+            margin-left: -10px;
+            margin-bottom: 15px;
+            a.strike{
+                margin-left: 25px;
+                color: black;
+                text-decoration: line-through;
+            }
+            a.normal{
+                margin-left: 25px;
+                color: black;
+                text-decoration: none;
+            }
+        }
+    }
+}
+div.glob {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.8);
+    position:absolute;
+    div.new_t {
+        font-family: 'ArialRegular';
+        width: 380px;
+        height: 220px;
+        position:absolute;
+        top: 50%;
+        left:50%;
+        margin-top: -190px;
+        margin-left: -110px;
+        background-color: white;
+        .nifty_form{
+            text-align: center;
+            margin-top: -30px;
+            .form-control {
+                width: 340px;
+                margin-left: 20px;
+                border-radius: 0 !important;
+            }
+            .btn {
+                width: 168px;
+                border-radius: 0 !important;
+            }
+        }
+    }
+}
+
+.select2-selection, .select2-selection__rendered, .select2-selection__arrow {
+   height: 40px !important;
+   span {
+       line-height: 40px !important;
+       text-align: left;
+   }
+}
+
+.select2-selection__arrow {
+    margin-top: 8px;
+}
+
+.select2-selection {
+   border-radius: 0 !important;
+   margin-top: 10px;
+   width: 340px;
+}
